@@ -81,9 +81,11 @@
               <tal:block define="ds options/datastructure;
                                  dm ds/getDataModel;
                                  proxy dm/getProxy;
+                                 display_ee
+                                   here/display_external_editor|python:True;
                                  portal here/portal_url/getPortalObject;
                                  field_id python:here.fields[0]">
-              <tal:block condition="nocall:proxy">
+              <tal:block condition="python: proxy and display_ee">
                 -
                 <a href="http://url..."
                    i18n:translate="cpsschemas_label_file_edit_online"
