@@ -8,6 +8,8 @@ New features:
 - GenericSelect and MultiGenericSelect widgets can use a
   MethodVocabularyWithContext vocabulary.
 - Select Widget and other Generic Select widgets vocabularies can be sorted.
+- made File and AttachedFile widgets more configurable: link to external editor,
+  html preview and html printable preview are hideable thanks to properties
 Bug fixes:
 ~~~~~~~~~~
 - Clicking to open the popup for photo widgets will not refresh anymore the
